# celery_demo

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  variables.env
celery_demo/: manage.py
celery_demo/celery_demo/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
celery_demo/parking/: admin.py  models.py  tasks.py
celery_demo/parking/migrations/: 0001_initial.py  0002_parking_ended_at.py  0003_report.py
