[tool.poetry]
name = "django-celery-demo"
version = "0.1.0"
description = ""
authors = ["eltonplima <eltonplima@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.8"
django-celery-results = "^1.2.1"
django-celery-beat = "^2.0.0"
environs = "^8.0.0"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.8.5"
flower = "^0.9.5"

[tool.poetry.dev-dependencies]
ipython = "^8.10.0"
pytest = "^5.4.3"
pylint = "^2.5.3"
docker-compose = "^1.26.2"
django-extensions = "^3.0.3"
httpie = "^2.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
